# net-pal

./: .gitmodules  README.md  net-pal.cabal  stack.yaml
src/Network/Pal/: Client.hs  Server.hs  Shared.hs
test/: ClientMain.hs  ServerMain.hs  Shared.hs
