name:                net-pal
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lukexi/net-pal#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Developer
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.Pal.Client
                       Network.Pal.Server
                       Network.Pal.Shared
  build-depends:       base >= 4.7 && < 5
                     , henet
                     , stm
                     , binary
                     , bytestring
                     , network
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall

test-suite client
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ClientMain.hs
  other-modules:       Shared
  build-depends:       base
                     , net-pal
                     , binary
                     , henet
                     , stm
                     , network
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


test-suite server
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             ServerMain.hs
  other-modules:       Shared
  build-depends:       base
                     , net-pal
                     , binary
                     , henet
                     , stm
                     , network
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/net-pal
